--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -15,12 +15,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
-#        use_sql_comments: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-#  logging:
-#    level:
-#      org.hibernate.SQL: DEBUG
-#      org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+jwt:
+  secret: ${JWT_SECRET}
 
