Added other paths of inventory-service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
           uri: lb://INVENTORY-SERVICE
           predicates:
             - Path=/product/**
-            
+            - Path=/category/**
+            - Path=/inventory/**
+
 server:
   port: 8765
