--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: security
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/jwt_security?useSSL=false
+    url: jdbc:postgresql://localhost:5432/user_db?useSSL=false
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: Podman56
