--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -58,6 +58,27 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>3.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- jjwt needs to be available during compilation because the code directly utilizes its functionalities.-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+		<!-- jjwt-jackson is only required at runtime since it's an internal mechanism used by jjwt for JSON processing, and the application doesn't directly interact with it -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.6</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
