--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-service
+    name: USER-SERVICE
 
   datasource:
     url: jdbc:postgresql://localhost:5432/user_db?useSSL=false
@@ -23,4 +23,18 @@ server:
 
 jwt:
   secret: ${JWT_SECRET}
+  expiration: 86400000
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+
+
 
