--- a/service-registry/src/main/resources/application.yml
+++ b/service-registry/src/main/resources/application.yml
@@ -13,3 +13,8 @@ eureka:
   client:
     fetch-registry: false # Inorder to avoid unnecessary network calls
     register-with-eureka: false # Inorder not to register itself with the eureka server
+
+logging:
+  level:
+    com.netflix.eureka: DEBUG
+
