--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/user_db?useSSL=false
     driver-class-name: org.postgresql.Driver
     username: postgres
-    password: ${PASSWORD}
+    password: Podman56
 
   jpa:
     hibernate:
