--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: order-service
+    name: ORDER-SERVICE
 
   datasource:
     url: jdbc:postgresql://localhost:5432/order_db?useSSL=false
@@ -26,3 +26,8 @@ spring:
 
 server:
   port: 8082
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
